# dummy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: poetry-build.yaml  prerelease.yaml  pytest-actions.yaml  release.yaml
docs/source/: conf.py  index.rst
src/dummy/: __init__.py
src/dummy_ERG/: __init__.py
src/dummyproject/: __init__.py
tests/: test_dummy_ERG.py  test_dummyproject.py  test_poetry.py
