[tool.poetry]
name = "dummy_ERG"
version = "0.1.4"
description = ""
authors = ["EbonyGunwhy <e.gunwhy@sheffield.ac.uk>"]
readme = "README.md"
packages = [{include = "dummy_ERG", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.22.4"

[tool.poetry.group.test.dependencies]
pytest = "^5.2"

[tool.poetry.group.docs.dependencies]
sphinx = "4.5.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
